ConfigCreator and code cleanup

--- a/HacDesktopApp/HacDesktopApp.csproj
+++ b/HacDesktopApp/HacDesktopApp.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Config.cs" />
+    <Compile Include="Classes\ConfigCreator.cs" />
     <Compile Include="Forms\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
